# Verite-App

./: # Mount Google Drive.py  .gitignore  BOAS_Dataset_Download_Processing.ipynb  EEG_Sleep_Stage_Classification2.ipynb  MindSetPro_with_TodoList.ipynb  README.md  ble_comm.h  bpm dataset.ipynb  build.gradle.kts  build_log.txt  dsp.h  eeg.ipynb  eeg_classification.ipynb  fixed_eeg_classification.ipynb  gradle.properties  gradlew  gradlew.bat  hrvanalyzer.ipynb  local.properties  neuro_band_full_logic.tflite  neuro_band_morning_briefs.ipynb  neuro_band_morning_briefss.ipynb  neuro_band_v1_complete.tflite  neuro_band_voice_cells.ipynb  neuro_band_voice_gtts.ipynb  neuro_health_model (1).tflite  neuro_health_model.tflite  settings.gradle.kts  stress_model.tflite  sub-1_scans.tsv  test_api.js
antigravity-web/: index.html  package-lock.json  package.json
app/: build.gradle.kts  google-services.json  proguard-rules.pro
backend/tmr-antigravity-v3/: CHANGELOG_v3.md  Makefile  PEER_REVIEW_FIXES.md  README.md  pyproject.toml
backend/tmr-antigravity-v3/alembic/: env.py
backend/tmr-antigravity-v3/alembic/versions/: 001_initial.py
backend/tmr-antigravity-v3/infra/docker/: Dockerfile.api  alerts.yml  docker-compose.yml  prometheus.yml
backend/tmr-antigravity-v3/infra/k8s/: manifests.yaml
backend/tmr-antigravity-v3/requirements/: api.txt  eeg.txt
backend/tmr-antigravity-v3/services/ai/: knowledge_base.py  router.py  safety_guard.py
backend/tmr-antigravity-v3/services/api/: config.py  database.py  dependencies.py  encryption.py  main.py  models.py  schemas.py
backend/tmr-antigravity-v3/services/api/routers/: auth.py  plans.py  safety.py  tmr.py  users.py  voice.py
backend/tmr-antigravity-v3/services/eeg/: audio_delivery.py  base.py  signal_processing.py  sleep_stager.py  synthetic_driver.py
backend/tmr-antigravity-v3/services/eeg/drivers/: muse_driver.py  openbci_driver.py
backend/tmr-antigravity-v3/services/safety/: crisis_gate.py
backend/tmr-antigravity-v3/services/voice/: stt_engine.py  tts_engine.py
backend/tmr-antigravity-v3/services/workers/: celery_app.py  plan_generator.py  tmr_worker.py
backend/tmr-antigravity-v3/tests/: conftest.py
backend/tmr-antigravity-v3/tests/integration/: test_api.py
backend/tmr-antigravity-v3/tests/unit/: test_all.py
brain_emotion/: __init__.py  api_server.py  config.py  emotion_taxonomy.py  feature_extractor.py  heca_engine.py  signal_processor.py  trainer.py
firmware/: esp32_eeg_ble.ino
firmware_reference/: ble_comm.h  config.h  (+4 more)
verite_complete_production_final (1)/verite_tmr/: Dockerfile  README.md  pyproject.toml  run_tests.py
verite_complete_production_final (1)/verite_tmr/.github/workflows/: ci.yml
verite_complete_production_final (1)/verite_tmr/src/verite_tmr/: __init__.py  cli.py  config.py  orchestrator.py  safety.py  session.py
verite_complete_production_final (1)/verite_tmr/src/verite_tmr/analysis/: __init__.py
verite_complete_production_final (1)/verite_tmr/src/verite_tmr/audio/: __init__.py
verite_complete_production_final (1)/verite_tmr/src/verite_tmr/detection/: __init__.py  arousal.py  artefact.py  coupling.py  kcomplex.py  spindle_cnn.py
verite_complete_production_final (1)/verite_tmr/src/verite_tmr/document/: __init__.py
verite_complete_production_final (1)/verite_tmr/src/verite_tmr/hardware/: __init__.py
verite_complete_production_final (1)/verite_tmr/src/verite_tmr/memory/: __init__.py  assessor.py
verite_complete_production_final (1)/verite_tmr/src/verite_tmr/phase/: __init__.py  ar.py  base.py  echt.py  lms.py
verite_complete_production_final (1)/verite_tmr/src/verite_tmr/scripts/: __init__.py  train_arousal.py  train_spindle.py
verite_complete_production_final (1)/verite_tmr/tests/: conftest.py  test_correctness.py
(+496 files in other folders)
