[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verite-tmr"
version = "10.5.2"
description = "Vérité TMR — Closed-Loop Targeted Memory Reactivation System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Vérité TMR Research Team"},
]
keywords = ["TMR", "sleep", "memory", "neuroscience", "EEG", "closed-loop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "soundfile>=0.12",
    "librosa>=0.10",
    "pydub>=0.25",
    "gTTS>=2.5",
    "sounddevice>=0.4",
    "websocket-client>=1.7",
    "fpdf2>=2.7",
    "tenacity>=9.0",
    "tqdm>=4.66",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "python-pptx>=0.6",
    "pdf2image>=1.17",
    "pytesseract>=0.3",
    "Pillow>=10.0",
]

[project.optional-dependencies]
llm = [
    "groq>=0.18",
    "google-genai>=1.0",
]
polly = [
    "boto3>=1.34",
]
ml = [
    "onnxruntime>=1.17",
    "torch>=2.0",
    "transformers>=4.40",
    "mne>=1.6",
    "shap>=0.45",
    "joblib>=1.3",
]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "websockets>=12.0",
]
encrypted = [
    "pysqlcipher3",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
    "pre-commit>=3.6",
]
all = [
    "verite-tmr[llm,polly,ml,server,encrypted,dev]",
]

[project.scripts]
verite = "verite_tmr.cli:main"
verite-train-spindle = "verite_tmr.scripts.train_spindle:main"
verite-train-arousal = "verite_tmr.scripts.train_arousal:main"

[tool.hatch.build.targets.wheel]
packages = ["src/verite_tmr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "hardware: marks tests requiring hardware",
    "correctness: marks scientific correctness tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
packages = ["verite_tmr"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "SIM"]
